# rust-learning

./: .gitignore  README.md
cffi/: .gitignore  main.c  makefile  rustc.h
cffi/rustc/: Cargo.toml
cffi/rustc/src/: lib.rs
strsplit/: Cargo.toml
strsplit/src/: lib.rs
trust/: Cargo.toml  run.sh
trust/src/: main.rs  tcp.rs
