[package]
name = "rustc"
version = "0.1.0"
authors = ["Connor Bade <nbadech@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name="rustc"
crate-type = ["staticlib"] # for now using a static lib because thats probably what I would use in the real world for now

[dependencies]
